[gd_scene load_steps=10 format=2]

[ext_resource path="res://Cell.gd" type="Script" id=1]

[sub_resource type="QuadMesh" id=1]

[sub_resource type="OpenSimplexNoise" id=3]

[sub_resource type="NoiseTexture" id=4]
noise = SubResource( 3 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0, 0.6, 0, 1 )
albedo_texture = SubResource( 4 )
metallic_texture_channel = 1

[sub_resource type="CubeMesh" id=2]

[sub_resource type="OpenSimplexNoise" id=6]

[sub_resource type="NoiseTexture" id=7]
width = 1024
height = 1024
noise = SubResource( 6 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.796078, 0.466667, 0, 1 )
albedo_texture = SubResource( 7 )

[node name="Cell" type="Spatial"]
script = ExtResource( 1 )

[node name="Floor" type="StaticBody" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
transform = Transform( 2, 0, 0, 0, -3.25841e-07, 1, 0, -2, -1.62921e-07, 0, 0, 0 )
layers = 65
mesh = SubResource( 1 )
material/0 = SubResource( 5 )

[node name="CollisionPolygon" type="CollisionPolygon" parent="Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0 )
polygon = PoolVector2Array( -1, 0, 1, 0 )

[node name="WallW" type="StaticBody" parent="."]
transform = Transform( 0.1, 0, 0, 0, 1, 0, 0, 0, 1, -0.9, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="WallW"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 8 )

[node name="CollisionPolygon" type="CollisionPolygon" parent="WallW"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0 )
polygon = PoolVector2Array( 1, 2, -1, 2, -1, 0, 1, 0 )

[node name="WallE" type="StaticBody" parent="."]
transform = Transform( 0.1, 0, 0, 0, 1, 0, 0, 0, 1, 0.9, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="WallE"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 8 )

[node name="CollisionPolygon" type="CollisionPolygon" parent="WallE"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0 )
polygon = PoolVector2Array( 1, 2, -1, 2, -1, 0, 1, 0 )

[node name="WallN" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.1, 0, 0, -0.9 )

[node name="MeshInstance" type="MeshInstance" parent="WallN"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 8 )

[node name="CollisionPolygon" type="CollisionPolygon" parent="WallN"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0 )
polygon = PoolVector2Array( 1, 2, -1, 2, -1, 0, 1, 0 )

[node name="WallS" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.1, 0, 0, 0.9 )

[node name="MeshInstance" type="MeshInstance" parent="WallS"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 8 )

[node name="CollisionPolygon" type="CollisionPolygon" parent="WallS"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0 )
polygon = PoolVector2Array( 1, 2, -1, 2, -1, 0, 1, 0 )
